# MOOS-python-utils

./: .gitignore  CMakeLists.txt  README  WARRANTY
SwigBindings/: .gitignore  CMakeLists.txt  mooslib_python.i  mooslib_python.i.comm_client_wrapper_attempt
utils/: .gitignore  Copley.py  DiveOfficer.py  Joystick.py  Luigi.py  MOOSDBparser.py  PingMonitor.py  StartMOOS  StartMOOS.py  compass_characterize.py  iJoystick.py  iMS  iMS.py  install-speech-software.sh  pyMOOS_Demo.py  trackGPSmoos.py  trackGPSserial.py
