##########################################
# This makes Python bindings using SWIG  #
##########################################
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET(CMAKE_SWIG_FLAGS "")
SET(CMAKE_SWIG_OUTDIR ".")
#SET(CMAKE_SWIG_OUTDIR ${LIBRARY_OUTPUT_PATH}) 
SET_SOURCE_FILES_PROPERTIES(mooslib_python.i PROPERTIES CPLUSPLUS ON)


FIND_PACKAGE(PythonLibs)
IF(PYTHONLIBS_FOUND)
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
  SWIG_ADD_MODULE(pyMOOS python mooslib_python.i)
  SWIG_LINK_LIBRARIES(pyMOOS ${PYTHON_LIBRARIES} MOOS MOOSGen)
ENDIF(PYTHONLIBS_FOUND)


